# tritium-edge

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  compile_commands.json  partitions_ota_16MB.csv  platformio.ini  pre_build.py  pyproject.toml  sdkconfig.defaults  sdkconfig.touch-lcd-35bc-os  sdkconfig.touch-lcd-43c-box-os  setup.sh
apps/: README.md
apps/_template/: template_app.cpp  template_app.h
apps/camera/: camera_app.cpp  camera_app.h
apps/diag/: diag_app.cpp  diag_app.h
apps/effects/: effects_app.cpp  effects_app.h
apps/ota/: REQUIREMENTS.md  ota_app.cpp  ota_app.h
apps/starfield/: starfield_app.cpp  starfield_app.h
apps/system/: system_app.cpp  system_app.h
apps/test/: test_app.cpp  test_app.h
apps/ui_demo/: ui_demo_app.cpp  ui_demo_app.h
apps/wifi_setup/: wifi_setup_app.cpp  wifi_setup_app.h
docs/: ACOUSTIC_MODEM.md  ADDING_AN_APP.md  ADDING_A_BOARD.md  ARCHITECTURE.md  BLE_DEVICE_FINGERPRINTING.md  CHANGELOG.md  COMMISSIONING.md  DEVICE-PROTOCOL.md  DEVICE_FINGERPRINTING.md  DISPLAY_LESSONS.md  ESP32_ECOSYSTEM_RESEARCH.md  ESP32_LIBRARY_ECOSYSTEM.md  GETTING_STARTED.md  GIS_WEBSERVER_INTEGRATION.md  HARDWARE-ABSTRACTION.md  INTEGRATION.md  MANAGEMENT-SYSTEM.md  MESHTASTIC_INTEGRATION.md  MULTI-TENANT.md  PLUGIN-SYSTEM.md  README.md  TRITIUM-OS-VISION.md  api_migration_guide.md  boards.md  lvgl_integration_guide.md  panel_driver_research.md  tritium_ecosystem_audit.md
include/: README.md  app.h  display_init.h  lv_conf.h  ota_public_key.h  service.h  service_registry.h  tritium_compat.h  tritium_i2c.h  wifi_classifier.h
include/boards/: README.md  esp32_s3_amoled_191m.h  esp32_s3_touch_amoled_18.h  esp32_s3_touch_amoled_241b.h  esp32_s3_touch_lcd_349.h  esp32_s3_touch_lcd_35bc.h  esp32_s3_touch_lcd_43c_box.h
lib/: README.md
lib/BatteryMonitor/: battery_monitor.cpp  battery_monitor.h
lib/BatteryWidget/: battery_widget.cpp  battery_widget.h
lib/GfxEffects/: README.md  gfx_effects.h
lib/Panel_AXS15231B/: Panel_AXS15231B.cpp  Panel_AXS15231B.hpp  Touch_AXS15231B.cpp  Touch_AXS15231B.hpp
lib/StarField/: StarField.cpp  StarField.h
lib/board_fingerprint/: board_fingerprint.cpp  board_fingerprint.h
lib/display/: backlight.h  board_config.h  board_configs.cpp  display.cpp  display.h  display_universal.cpp  display_universal.h  library.json
lib/hal_acoustic/: hal_acoustic.cpp  hal_acoustic.h
lib/hal_acoustic_modem/: acoustic_modem_service.h  hal_acoustic_modem.cpp  hal_acoustic_modem.h
lib/hal_audio/: hal_audio.cpp  hal_audio.h
lib/hal_autonomous_alert/: hal_autonomous_alert.cpp  hal_autonomous_alert.h
lib/hal_ble/: ble_manager.cpp  ble_manager.h
lib/hal_ble_features/: ble_features_service.h  hal_ble_features.cpp  hal_ble_features.h
lib/hal_ble_interrogator/: ble_interrogator_service.h  hal_ble_interrogator.cpp  hal_ble_interrogator.h
lib/hal_ble_ota/: hal_ble_ota.cpp  hal_ble_ota.h
lib/hal_ble_scanner/: ble_scanner_service.h  hal_ble_scanner.cpp  hal_ble_scanner.h
lib/hal_ble_serial/: ble_serial_service.cpp  ble_serial_service.h  hal_ble_serial.cpp  hal_ble_serial.h
lib/hal_camera/: camera_mqtt_publisher.cpp  camera_mqtt_publisher.h  hal_camera.cpp  hal_camera.h
lib/hal_config_sync/: README.md  hal_config_sync.cpp  hal_config_sync.h
lib/hal_cot/: README.md  cot_service.h  hal_cot.cpp  hal_cot.h
lib/hal_debug/: debug_ble_bridge.cpp  debug_log.cpp  debug_log.h
lib/hal_diag/: diag_service.h  hal_diag.cpp  hal_diag.h  hal_diag_dump.cpp  hal_diag_dump.h
lib/hal_diaglog/: hal_diaglog.cpp  hal_diaglog.h
lib/hal_environment/: hal_environment.cpp  hal_environment.h
lib/hal_espnow/: README.md  REQUIREMENTS.md  espnow_service.h  hal_espnow.cpp  hal_espnow.h  mesh_manager.cpp  mesh_manager.h  mesh_protocol.h
lib/hal_fs/: README.md  hal_fs.cpp  hal_fs.h
lib/hal_gis/: ble_classifier.cpp  ble_classifier.h  hal_gis.cpp  hal_gis.h  mbtiles_reader.cpp  mbtiles_reader.h  oui_lookup.cpp  oui_lookup.h
lib/hal_heartbeat/: hal_heartbeat.cpp  hal_heartbeat.h  heartbeat_service.h  network_quality.cpp  network_quality.h  sensor_self_test.cpp  sensor_self_test.h
lib/hal_identity/: hal_identity.cpp  hal_identity.h  (+1 more)
scripts/: README.md  build.sh  deploy-fleet.sh  flash-monitor.sh  flash.sh  health-check.sh  identify.sh  meshtastic-test.py  monitor.sh  new-app.sh  ota-push.sh  setup.sh  test-scripts.sh  watchdog.sh
sdcard_data/: oui.db
server/: Makefile  REQUIREMENTS.md  fleet_server.py  generate_tls_cert.sh  provision_device.py  requirements.txt  start.sh
sim/: README.md  sim_display.h  sim_hal.h  sim_main.cpp
src/: CMakeLists.txt  README.md  idf_component.yml  main.cpp  service_registry.cpp  tritium_globals.cpp
tools/: README.md  REQUIREMENTS.md  ble_ota.py  build_oui_db.py  demo_report.html  detect_boards.py  download_tiles.py  generate_signing_key.py  hw_test.sh  package_firmware.py  provision_sd.py  serial_ota.py  test_ota.py  ui_dump.py  ui_test.py  ui_test_sweep.py  ui_test_visual.py
(+252 files in other folders)
