[project]
name = "tritium-edge"
version = "3.0.0"
description = "Software Defined IoT — Edge device fleet management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "pyserial>=3.5",
    "cryptography>=41.0.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
]

[tool.setuptools.packages.find]
where = ["server"]
